feat: update title in index.html to reflect correct application name

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/TrustFi.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>my-trustfi-app</title>
+    <title>TrustFi</title>
   </head>
   <body>
     <div id="root"></div>
